--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/base.css
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/base.css
@@ -261,6 +261,16 @@ footer .row {
     color: #fff;
 }
 
+.navbar-toggler {
+    background-color: #fff; /* Cambia el color de fondo */
+    border: none; /* Elimina el borde si no lo quieres */
+    margin: 10px; /* Añade margen */
+}
+
+.navbar-toggler-icon {
+    background-image: url('data:image/svg+xml;charset=UTF8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30"><path stroke="black" stroke-width="2" d="M4 7h22M4 15h22M4 23h22"/></svg>');
+    /* Cambia el color de las líneas del ícono a negro */
+}
 
 /* fin css menu lateral */
 
