--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_admin.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/dashboard_admin.html
@@ -118,6 +118,47 @@
                     <label for="stock_actual">Stock actual</label>
                     {{ form.stock_actual }}
                 </div>
+                <div class="form-group">
+                    <label for="modelo">Modelo</label>
+                    {{ producto_modelo_form.modelo }}
+                </div>       
+                <div class="form-group">
+                    <label for="color">Color</label>
+                    {{ producto_color_form.color }}
+                </div>
+                <div class="form-group">
+                    <label for="color">Codigo Hex</label>
+                    {{ producto_color_form.codigo_hex }}
+                </div>              
+                <div class="form-group">
+                    <label for="almacenamiento">Almacenamiento</label>
+                    {{ producto_almacenamiento_form.capacidad }}
+                </div>
+                <div class="form-group">
+                    <label for="memoria_ram">memoria_ram</label>
+                    {{ form.memoria_ram }}
+                </div>
+                <div class="form-group">
+                    <label for="sistema_operativo">sistema_operativo</label>
+                    {{ form.sistema_operativo }}
+                </div>
+                <div class="form-group">
+                    <label for="tamaño_pantalla">tamaño_pantalla</label>
+                    {{ form.tamaño_pantalla }}
+                </div>
+                <div class="form-group">
+                    <label for="procesador">procesador</label>
+                    {{ form.procesador }}
+                </div>
+                <div class="form-group">
+                    <label for="tarjeta_grafica">tarjeta_grafica</label>
+                    {{ form.tarjeta_grafica }}
+                </div>
+                <div class="form-group">
+                    <label for="descripcion_tg">descripcion_tg</label>
+                    {{ form.descripcion_tg }}
+                </div>
+
                 <button type="submit" class="submit-btn">Agregar Producto</button>
             </form>
         </div>
