--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/crear_cuenta.css
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/static/css/crear_cuenta.css
@@ -1,4 +1,4 @@
-.logo{
+.logo {
     width: 50px;
     height: auto;
     border-radius: 50%;
@@ -9,59 +9,68 @@
     display: flex;
 }
 
-.top{
+.top {
     margin-top: 5%;
-    margin-left: 35%;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
     justify-content: center;
     text-align: center;
     align-items: center;
 }
 
-.custom-img{
+.custom-img {
     width: 100%;
     height: 100%;
 }
 
-.center{
+.center {
     text-align: center;
     align-items: center;
 }
 
-
-
 .navbar-nav .nav-link:hover {
-    color:darksalmon ;
+    color: darksalmon;
 }
 
-.buttom{
+.buttom {
     background-color: white;
     margin-top: 15%;
     display: flex;
 }
 
-.margen{
+.margen {
     margin: 5%;
-
 }
 
-.logo_2{
+.logo_2 {
     width: 50px;
     height: auto;
     border-radius: 50%;
 }
 
-.ancho_foot{
+.ancho_foot {
     width: max-content;
 }
 
-footer{
-    width: 100%;
-}
-
-.estilos_div_card{
+.estilos_div_card {
     padding: 15px;
 }
 
-/* CCS formulario*/
+/* Formulario */
+.form-group {
+    margin-bottom: 1rem;
+}
 
+.btn-block {
+    display: block;
+    width: 100%;
+}
 
+/* Responsivo */
+@media screen and (max-width: 768px) {
+    .top {
+        width: 90%;
+        margin-top: 2%;
+    }
+}
