--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/crear_cuenta.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/crear_cuenta.html
@@ -32,7 +32,7 @@
      
 <!-- Card creacion de cuenta-->
 {% block content %}
-<div class="card mb-3 top" style="width: 30%;">
+<div class="card mb-3 top">
     <div class="card-body">
         <!-- Renderizar errores generales del formulario -->
         {% if form.non_field_errors %}
