--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/deseados.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/deseados.html
@@ -10,20 +10,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Deseados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    {% block extra_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/deseados.css' %}">
+    {% endblock %}
 </head>
 <body style="background-color: white;">
 
     {% block content %}
     <!-- Contenido principal de lista de deseados -->
-    <div class="container my-4">
+     <div class="container my-4">
         <div class="row">
-            <div class="col-8">
-                <div class="row">
+            <div class="col-lg-8">
+                <div class="row" style="margin-right:20px;">
                     {% for producto in productos_deseados %}
-                    <div class="col-6 mb-4">
+                    <div class="col-md-6 col-sm-12 mb-4">
                         <div class="card shadow-sm border-light">
-                            <img src="{% static 'imagenes/' %}{{ producto.producto.imagen }}" class="card-img-top" alt="{{ producto.producto.nombre }}">
+                            <img src="{{ producto.producto.imagen.url }}" class="card-img-top" alt="{{ producto.producto.nombre }}">
                             <div class="card-body">
                                 <h5 class="card-title">{{ producto.producto.nombre }}</h5>
                                 <p class="card-text">{{ producto.producto.categoria.nombre }}</p>
@@ -43,7 +45,7 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4">
                 <h4 class="text-center">Lista de Deseados</h4>
                 <ul class="list-group">
                     {% for producto in productos_deseados %}
