--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/detalle_producto.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/detalle_producto.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,8 +10,9 @@
     <title>detalle_producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="{% static 'imagenes/' %}">
+    {% block extra_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/detalle_producto.css'%}">
-    
+    {% endblock %}
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-449T3X34HB"></script>
@@ -26,7 +28,7 @@
 <!--___________________________termina el nav______________________________________-->
 
 <!--____________________________________________________________________-->
-
+{% block content %}
 <!-- Lista del carrito del usuario -->
     <div class="container">
         <div class="row">
@@ -57,57 +59,80 @@
         </div>
     </div>
     <!-- Especificaciones tecnicas -->
-    <div class="container">
-        <div class="row">
-            <div class="card" >
-                <div class="card-body">
-                    <div class="col-12">
-                        <div class="specifications-table">
-                            <h3>Especificaciones del Producto</h3>
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Característica</th>
-                                        <th>Detalle</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Resolución de pantalla</td>
-                                        <td>Super Retina XDR</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Memoria RAM</td>
-                                        <td>6GB</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Sistema operativo</td>
-                                        <td>iOS</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Capacidad de almacenamiento</td>
-                                        <td>128 GB</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Cámara posterior</td>
-                                        <td>12 MP</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Resistente al agua</td>
-                                        <td>IP68 (Protegido contra inmersión)</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Alto</td>
-                                        <td>15.7 cm</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+<!-- Especificaciones tecnicas -->
+<div class="container">
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <div class="col-12">
+                    <h3>Especificaciones del Producto</h3>
+                    {% for producto in d_p_real %}
+                    <div class="specifications-table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Característica</th>
+                                    <th>Detalle</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Resolución de pantalla</td>
+                                    <td>{{ producto.tamaño_pantalla }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Memoria RAM</td>
+                                    <td>{{ producto.memoria_ram }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Sistema operativo</td>
+                                    <td>{{ producto.sistema_operativo }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Capacidad de almacenamiento</td>
+                                    <td>{{ producto.descripcion }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Procesador</td>
+                                    <td>{{ producto.procesador }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Tarjeta gráfica</td>
+                                    <td>{{ producto.tarjeta_grafica }}</td>
+                                </tr>
+                                <tr>
+                                    <td>Descripción de tarjeta gráfica</td>
+                                    <td>{{ producto.descripcion_tg }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
-        </div>
+        </div>
     </div>
+</div>
+<!-- Sección de productos relacionados -->
+<div class="related-products">
+    <h3>Productos relacionados</h3>
+    <div class="row">
+        {% for producto in productos_1 %}
+        <div class="col-md-3">
+            <div class="card">
+                <img src="{{ producto.imagen.url }}" class="card-img-top" alt="{{ producto.nombre }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ producto.nombre }}</h5>
+                    <p class="card-text">Precio: ${{ producto.precio }}</p>
+                    <a href="{% url 'detalle_producto' producto.id %}" class="btn btn-primary">Ver detalles</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+</div>
+
 <!--___________________Productos Relacionados, Carrusel de tarjetas_____________________-->
 <div class="container">
     <div class="row">
@@ -172,5 +197,6 @@
     <!--___________________________ Footer _______________________________-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 </html>
