--- a/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/inicio_sesion.html
+++ b/Fase 2/Evidencias del proyecto/Evidencias del sistema/djangoproject/ecommerse/templates/inicio_sesion.html
@@ -26,8 +26,8 @@
 </script>
 
       <!-- Card inicio de cuenta-->
-      <div class="card mb-3 top" style="width: 30%;">
-        <div class="margen">
+      <div class="card mb-3 top mx-auto shadow-sm" style="max-width: 400px;">
+        <div class="card-body">
             {% if messages %}
                 <div>
                     {% for message in messages %}
@@ -37,15 +37,21 @@
                     {% endfor %}
                 </div>
             {% endif %}
-            <form method="post">
+            <form method="post" class="text-center">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-                <p>¿A olvidado su contraseña? <a href="{% url 'password_reset' %}">¡Recupérala!</a></p>
-                <p>¿No está registrado? <a href="{% url 'registro' %}">¡Regístrate!</a></p>
+                <button type="submit" class="btn btn-primary btn-block mt-3">Iniciar sesión</button>
+                <p class="mt-3">
+                    ¿Ha olvidado su contraseña? 
+                    <a href="{% url 'password_reset' %}">¡Recupérala!</a>
+                </p>
+                <p>
+                    ¿No está registrado? 
+                    <a href="{% url 'registro' %}">¡Regístrate!</a>
+                </p>
             </form>
-            <div class="mb-3">
-                <img src="{% static 'imagenes/Logo_mauri_agency.jpeg' %}" alt="" style="width: 100%; border-radius: 5%;">
+            <div class="mt-4">
+                <img src="{% static 'imagenes/Logo_mauri_agency.jpeg' %}" alt="Logo Mauri Agency" class="img-fluid rounded">
             </div>
         </div>
     </div>
